--- a/Flowers-Shop/src/main/resources/templates/edit-order.html
+++ b/Flowers-Shop/src/main/resources/templates/edit-order.html
@@ -9,16 +9,17 @@
 <!--    <h1 class="display-6 p-2 border-bottom border-4 m-5 fw-bold fst-italic text-center text-white">All orders:-->
 <!--        <span class="px-2 text-white" th:text="${#lists.size(orders)}"></span>-->
 <!--    </h1>-->
-
+    <form th:method="post"
+          th:action="@{/order/edit}"
+          th:object="${order}"
+    >
 
     <div class="container py-1">
         <div class="row d-flex justify-content-center align-items-center">
             <div class="col-lg-8 col-xl-6">
                 <div class="border mb-3  bg-black" style="border-radius: 10px;">
-                    <form th:method="post"
-                          th:action="@{/order/edit}"
-                          th:object="${order}"
-                    >
+
+                        <input type="hidden" th:field="*{id}">
                         <div class="d-flex justify-content-center pt-4 text-white">
                             <p class="fw-bold mb-0 text-white text-center"
                                th:text="|Order id: ${order.getId()}|">Order Id: {order.id}</p>
@@ -27,11 +28,11 @@
                             <div class="shadow-0 mb-4">
                                 <div class="text-white">
                                     <div class="row mb-2" th:each="item, i : *{items}">
-
                                         <div class="col-lg-3">
                                             <img style="width: 100px; height: 100px;" th:src="${item.getUrl()}"
-                                                 class="img-fluid" alt="Picture of bouquet">
+                                            class="img-fluid" alt="Picture of bouquet">
                                         </div>
+                                        <input type="hidden" th:field="*{items[__${i.index}__].id}">
                                         <div class="col-lg-3 text-center d-flex flex-column justify-content-center align-items-center text-white">
                                             <p class="mb-0 small text-white" th:text="|Item No: ${item.getItemNumber()}|">Item number</p>
                                         </div>
@@ -78,21 +79,16 @@
 <!--                            <p class="fw-bold mb-0 text-white" th:text="|Shipping address: ${order.getShippingAddress()}|">Address</p>-->
 
                         </div>
-                    </form>
+<!--                    </form>-->
                     <div class="d-flex justify-content-center gap-5 pb-2 text-center">
 
-                        <form class="" th:method="post" th:action="@{/orders/edit/{id}(id=${order.getId()})}">
+                        <form class="" th:method="get" th:action="@{/orders/all}">
                             <button type="submit"
                                     class="btn-gold rounded-pill">Cancel</button>
                         </form>
 
-                        <form class="" th:method="post" th:action="@{/orders/edit/{id}(id=${order.getId()})}">
                             <button type="submit"
                                     class="btn-gold rounded-pill">Save</button>
-                        </form>
-
-
-
 
                     </div>
 
@@ -102,6 +98,8 @@
             </div>
         </div>
     </div>
+    </form>
+
 </section>
 <footer th:replace="~{fragments/commons::footer}"></footer>
 </body>
