implement delete order item

--- a/Flowers-Shop/src/main/resources/static/css/style.css
+++ b/Flowers-Shop/src/main/resources/static/css/style.css
@@ -370,6 +370,9 @@ button {
     border-radius: 10px;
 }
 
+.deleted {
+    display: none;
+}
 
 .shipping-order {
     background-image: url(/images/shipping-background.jpg);
