--- a/Flowers-Shop/src/main/resources/templates/shipping-order.html
+++ b/Flowers-Shop/src/main/resources/templates/shipping-order.html
@@ -6,8 +6,8 @@
 
 <section class="gradient-custom">
 
-    <h1 class="display-6 p-2 border-bottom border-4 m-5 fw-bold fst-italic text-center text-white">Shipping orders:
-        <span class="px-2 text-danger" th:text="${#lists.size(orders)}"></span>
+    <h1 class="display-6 p-2 m-5 fw-bold fst-italic text-center text-white">Shipping orders:
+        <span class="px-2 text-white" th:text="${#lists.size(orders)}"></span>
     </h1>
 
 
