--- a/Flowers-Shop/src/main/resources/templates/users.html
+++ b/Flowers-Shop/src/main/resources/templates/users.html
@@ -6,7 +6,7 @@
 
 <section class="gradient-custom">
 
-    <h1 class="display-6 p-2 border-bottom border-4 m-5 fw-bold fst-italic text-center text-white">All users:
+    <h1 class="display-6 p-2 m-5 fw-bold fst-italic text-center text-white">All users:
         <span class="px-2 text-white" th:text="${#lists.size(users)}"></span>
     </h1>
 
