--- a/Flowers-Shop/src/main/resources/templates/orders.html
+++ b/Flowers-Shop/src/main/resources/templates/orders.html
@@ -6,7 +6,7 @@
 
 <section class="gradient-custom mb-5 ">
 
-    <h1 class="display-6 p-2 border-bottom border-4 m-5 fw-bold fst-italic text-center text-white">All orders:
+    <h1 class="display-6 p-2 m-5 fw-bold fst-italic text-center text-white">All orders:
         <span class="px-2 text-white" th:text="${#lists.size(orders)}"></span>
     </h1>
 
