--- a/Flowers-Shop/src/main/resources/static/css/style.css
+++ b/Flowers-Shop/src/main/resources/static/css/style.css
@@ -389,5 +389,5 @@ button {
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
-
+    /*background-blend-mode: soft-light;*/
 }
