--- a/Flowers-Shop/src/main/resources/templates/orders.html
+++ b/Flowers-Shop/src/main/resources/templates/orders.html
@@ -78,8 +78,7 @@
 
                         <form th:method="post" th:action="@{/orders/{id}(id=*{order.getId()})}">
                             <button type="submit"
-                                    class="remove-btn rounded-pill
-                                     ">Delete</button>
+                                    class="remove-btn rounded-pill">Delete</button>
                         </form>
 
 <!--                        <form class="col" th:method="post" th:action="@{/order/change-status/{id}(id=${order.getId()})}">-->
