--- a/Flowers-Shop/src/main/resources/templates/cart.html
+++ b/Flowers-Shop/src/main/resources/templates/cart.html
@@ -9,7 +9,7 @@
 
     <div class="container-fluid mb-5">
 
-        <div th:each="item: ${items}" class="row align-items-center m-3 cart-round">
+        <div th:each="item: ${cart.getItems()}" class="row align-items-center m-3 cart-round">
 
             <div class="media col-12 col-md-3 p-2">
                 <img style="height: 300px;" th:src="${item.getBouquet().getUrl()}" alt="picture of bouquet">
@@ -18,7 +18,8 @@
             <div class="col-12 col-md-7 fs-5">
                 <p th:text="${item.getBouquet().getDescription()}">{Description}</p>
                 <p class="py-3 fst-italic" th:text="|Quantity: ${item.getQuantity()} pcs|">Quantity: {2} pcs</p>
-                <p class="fw-bold fst-italic" th:text="|Price per pcs: ${item.getBouquet().getPrice()} $|">Price: {2365.26} $</p>
+                <p class="fw-bold fst-italic" th:text="|Price per pcs: ${item.getBouquet().getPrice()} $|">Price:
+                    {2365.26} $</p>
             </div>
 
             <div class="col-12 col-md-2">
@@ -32,12 +33,15 @@
 
     <div class="mt-3 mb-5">
         <form th:action="@{/order/{cartId}(cartId=*{cart.getId()})}" th:method="post">
-            <p class="fs-3 fw-bold fst-italic m-3" th:text="|Total sum: ${totalSum} $|">Total sum: {totalSum} $</p>
-<!--            TODO: return to home if cart is empty-->
-<!--            TODO: empty cart when order is created -->
-            <button th:unless="0 == ${totalSum}" class="btn-gold rounded-pill mb-4 px-5 fs-3 fw-bold fst-italic">BUY</button>
+            <p th:if="${cart.getTotalPrice()} != 0" class="fs-3 fw-bold fst-italic m-3"
+               th:text="|Total sum: ${cart.getTotalPrice()} $|">Total sum: {totalSum} $</p>
+            <p th:if="${cart.getTotalPrice()} == 0" class="fs-1 fw-bold fst-italic m-3"
+               th:text="'The cart is empty!'">Empty</p>
+            <button th:if="${cart.getTotalPrice()} != 0" class="btn-gold rounded-pill mb-4 px-5 fs-3 fw-bold
+            fst-italic">BUY
+            </button>
             <p style="margin-bottom: 5em;">
-                <a th:href="@{/home}"class="rounded-pill mb-5 px-5 py-2 fs-5 fw-bold fst-italic text-light
+                <a th:href="@{/home}" class="rounded-pill mb-5 px-5 py-2 fs-5 fw-bold fst-italic text-light
                 text-decoration-none border border-light">To gallery</a>
             </p>
         </form>
